renamed homepage.html to index.html in all href's

--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
 
     
     <div class="topnav">
-        <a href="homepage.html">Go Back</a>   
+        <a href="index.html">Go Back</a>   
         <a href="about.html">About Me</a> 
         <a href="skills.html">Skills</a>
         <a href="contact.html">Contact<a>
