--- a/skills.html
+++ b/skills.html
@@ -18,7 +18,7 @@
 <body >
 
     <div class="topnav">
-        <a href="homepage.html">Go Back</a>   
+        <a href="index.html">Go Back</a>   
         <a href="about.html">ABOUT</a> 
         <a href="skills.html">SKILLS</a>
         <a href="contact.html">CONTACT<a>
