--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
    
     <div class="topnav">
         
-        <a href="homepage.html">Go Back</a>  
+        <a href="index.html">Go Back</a>  
         <a href="about.html">About</a> 
         <a href="skills.html">Skills</a>
         <a href="contact.html">Contact<a>
